Fix build issues & wolf debug